tavern mobile fixed icon

--- a/front/src/components/Modal/Modal.module.scss
+++ b/front/src/components/Modal/Modal.module.scss
@@ -16,7 +16,7 @@
   color: #fff;
   text-align: center;
   line-height: 1.2;
-  background-color: rgba(#3a271d, .95);
+  background-color: #281A0C;
   clip-path: polygon(
     0% 0%,
     2% 2%,
@@ -65,6 +65,17 @@
     100% 100%,
     100% 100%, 98% 99%, 96% 100%, 95% 100%, 94% 100%, 92% 98%, 86% 100%, 86% 100%, 85% 99%, 82% 99%, 80% 100%, 79% 100%, 77% 100%, 75% 96%, 74% 100%, 70% 99%, 67% 99%, 64% 100%, 62% 100%, 59% 100%, 55% 98%, 51% 100%, 51% 100%, 48% 99%, 42% 100%, 42% 100%, 41% 100%, 38% 100%, 36% 96%, 35% 100%, 32% 99%, 28% 100%, 27% 99%, 24% 100%, 23% 100%, 21% 100%, 19% 98%, 17% 100%, 15% 100%, 13% 99%, 11% 100%, 9% 98%, 4% 100%, 3% 99%, 1% 100%
   );
+
+  & header {
+    @include flex(center, space-between, row nowrap);
+    font-weight: 400;
+    }
+
+  &__goblin {
+    width: 4.5rem;
+  }
+
+
 
   @include lg {
     left: 57%;
