--- a/front/src/sections/TheTavern/Tavern/ContactList/ContactList.module.scss
+++ b/front/src/sections/TheTavern/Tavern/ContactList/ContactList.module.scss
@@ -1,91 +1,85 @@
 @import '../../../../assets/scss/variables';
 
 .AddPlayerContainer {
+  font-family: 'Nunito Sans', sans-serif;
+  position: absolute;
+  right: 3rem;
+  top: 2rem;
+  background-color: #331d0f;
+  box-shadow: 3px 3px 2px 1px rgba(0, 0, 0, 0.6);
+  border-radius: 5px;
+
+  &__Image {
+    position: absolute;
+    z-index: 500;
+    width: 2.5rem;
+  }
+
+  @include md {
     font-family: 'Nunito Sans', sans-serif;
     position: absolute;
-    z-index: 600;
-    margin-left: -24rem;
-    margin-top: 2.5rem;
-    background-color: #331D0F;
+    right: 3rem;
+    top: 2rem;
+    background-color: #331d0f;
     box-shadow: 3px 3px 2px 1px rgba(0, 0, 0, 0.6);
-    border-radius:5px;
+    border-radius: 5px;
+  }
 
-
-&__Image {
+  &__Image {
     position: absolute;
     z-index: 500;
     width: 2.5rem;
+  }
 }
-    @include md {
-        font-family: 'Nunito Sans', sans-serif;
-        position: absolute;
-        z-index: 600;
-        margin-left: -24rem;
-        margin-top: 2.5rem;
-        background-color: #331D0F;
-        box-shadow: 3px 3px 2px 1px rgba(0, 0, 0, 0.6);
-        border-radius:5px;
-    
-    }
-    &__Image {
-        position: absolute;
-        z-index: 500;
-        width: 2.5rem;
-    }
-}
-
 
 .ContactList {
-    &__List{
-        &__Item{
-            display:flex;
-            //justify-content : center;
-            border-bottom:1px solid black;
-            align-items: center;
-            padding-bottom: 0.5rem;
-            &__Btn{
-                margin-right: 0.5rem;
-                background-color : #77d4bd;
-                border: none;
-                padding: 0.5rem;
-                border-radius: 2px;
-                border-color:#77d4bd ;
-                color: #fff;
+  &__List {
+    &__Item {
+      display: flex;
+      border-bottom: 1px solid black;
+      align-items: center;
+      padding-bottom: 0.5rem;
 
-                &:hover{
-                    background-color : #e19a2f;
-                }
-            }
-            &__Avatar {
-                margin-top: 0.5rem;
-                margin-left: 0.5rem;
-                width: 3rem;
-                border-radius: 50%;
-                margin-right : 0.5rem;
-            }
-            &__Content{
-                //padding-bottom: 0.5rem;
+      &__Btn {
+        margin-right: 0.5rem;
+        background-color: #77d4bd;
+        border: none;
+        padding: 0.5rem;
+        border-radius: 2px;
+        border-color: #77d4bd;
+        color: #fff;
 
-                width : 90%;
-                margin-right : 1rem;
-                
-            }
+        &:hover {
+          background-color: #e19a2f;
         }
-    }
+      }
 
-}
-
-.AddPlayer{
-    position: absolute;
-    width: 2.5rem;
-    right: 0;
-    margin-right: -10.5rem;
-    margin-top: -18rem;
-    z-index: 500;
-    @include md {
-        right: 13.5rem;
-        margin-left: -19rem;
+      &__Avatar {
         margin-top: 0.5rem;
+        margin-left: 0.5rem;
+        width: 3rem;
+        border-radius: 50%;
+        margin-right: 0.5rem;
+      }
+
+      &__Content {
+        width: 90%;
+        margin-right: 1rem;
+      }
     }
+  }
 }
 
+.AddPlayer {
+  position: absolute;
+  width: 2.5rem;
+  right: 0;
+  margin-right: -10.5rem;
+  margin-top: -18rem;
+  z-index: 500;
+  @include md {
+    right: 13.5rem;
+    margin-left: -19rem;
+    margin-top: 0.5rem;
+  }
+}
