--- a/front/src/sections/TheTavern/Thread/PostForm/PostForm.module.scss
+++ b/front/src/sections/TheTavern/Thread/PostForm/PostForm.module.scss
@@ -13,6 +13,21 @@
   transition: all 300ms ease-in;
   padding: 0 1rem;
 
+  &__NumberRequests {
+    text-align: center;
+    padding-top: 0.4rem;
+    position: absolute;
+    top: -0.5rem;
+    right: 0.5rem;
+    font-size: 0.9em;
+    font-weight: 400;
+    background-color: red;
+    color: #fff;
+    border-radius: 50%;
+    width: 2rem;
+    height: 2rem;
+  }
+
   @include md {
     margin-top: 1.8rem;
     margin-right: .75rem;
