--- a/front/src/components/Layout/Layout.module.scss
+++ b/front/src/components/Layout/Layout.module.scss
@@ -92,16 +92,18 @@
   background-size: cover;
   background-attachment: fixed;
 
+
   color: white;
   font-weight: 200;
 
   @include lg {
     grid-template-columns: 16rem auto;
     grid-template-areas: 'header main' 'header main' 'footer main';
+
   }
 
   &__Main {
-    grid-area: main;
+    grid-area: main;;
 
     @include lg {
       padding: $gutter ($gutter * 0.4);
