--- a/front/src/sections/TheTavern/Tavern/Chat/Chat.module.scss
+++ b/front/src/sections/TheTavern/Tavern/Chat/Chat.module.scss
@@ -64,6 +64,7 @@
     &__Form {
       @include flex(center, space-between, row wrap);
       //position: relative;
+
       word-wrap: break-word;
       &__Btn {
         margin-right: 1rem;
@@ -81,6 +82,7 @@
     }
 
     &__Input {
+      font-family: 'Nunito Sans', sans-serif;
       padding: ($gutter/4);
       width: 100%;
       height: 17vh;
