--- a/front/src/sections/TheTavern/Thread/Posts/Post/Post.module.scss
+++ b/front/src/sections/TheTavern/Thread/Posts/Post/Post.module.scss
@@ -47,6 +47,13 @@
   background-color: #03c9a5;
   width: 1.2rem;
   border-radius: 20%;
+  box-shadow: 0 0 0 0.1px #03c9a5 ;
+  &:hover {
+    cursor: pointer; 
+    animation:bounceOutContact .6s linear;
+  }
+
+  
   @include md {
     width: 1.1rem;
     padding: 0.1rem;
@@ -59,6 +66,7 @@
   display: block;
   margin: auto;
   font-size: 0.8rem;
+  
   @include md {
     font-size: 1rem;
   }
@@ -70,6 +78,12 @@
   border: solid 4px #18120E;
   width: 2.5rem;
   background-color: #18120E;
+  &:hover {
+    cursor: pointer; 
+    animation:bounceOut .4s linear;
+  }
+
+  
 
   @include md {
     width: 3.5rem;
@@ -83,6 +97,12 @@
   &__AlreadyContacts {
     @extend .AuthorAvatar;
     border: 4px solid #03c9a5;
+    background-color: #03c9a5;
+    box-shadow: 0 0 0 0.1px #03c9a5 ;
+    &:hover {
+      cursor: pointer; 
+      animation:bounceOutContact .6s linear;
+    }
   }
 }
 
@@ -203,3 +223,10 @@
   font-size: 1.1em;
 }
 
+@keyframes bounceOutContact {
+  0%{ box-shadow: 0 0 0 0.1px #03c9a5; opacity:1;}
+  25%{ box-shadow: 0 0 0 0.1px #03c9a5; opacity:1;}
+  50%{ box-shadow: 0 0 0 3px #03c9a5; opacity:1; }
+  75%{ box-shadow: 0 0 0 1px #03c9a5; opacity:1;}
+  100%{ box-shadow: 0 0 0 0.1px #03c9a5; opacity:1;}
+}
