--- a/front/src/sections/TheTavern/Thread/Search/Search.module.scss
+++ b/front/src/sections/TheTavern/Thread/Search/Search.module.scss
@@ -25,6 +25,11 @@
   border-radius: 4px;
   border-radius: 0.2rem;
   border: solid #33ccaf 1px;
+  transition: 0.4s;
+  &:hover {
+    border: solid #3de6c7 1px;
+    background-color: #3de6c7;
+  }
 
   @include md {
     font-size: 1em;
