css adjustments in tavern

--- a/front/src/assets/scss/index.scss
+++ b/front/src/assets/scss/index.scss
@@ -10,33 +10,34 @@
   color: #fff;
 }
 
-// @include lg {
-//   html ::-webkit-scrollbar {
-//     -webkit-appearance: none;
-//     width: 10px;
-//     height: 10px;
-//   }
-//   html ::-webkit-scrollbar-track {
-//     background: gold;
-//     border-radius: 0px;
-//   }
-//   html ::-webkit-scrollbar-thumb {
-//     cursor: pointer;
-//     border-radius: 5px;
-//     background: #888;
-//     -webkit-transition: color 0.2s ease;
-//     transition: color 0.2s ease;
-//   }
-//   html ::-webkit-scrollbar-thumb:window-inactive {
-//     background: rgba(0, 0, 0, 0.25);
-//   }
-//   html ::-webkit-scrollbar-thumb:hover {
-//     background: rgb(100, 100, 100);
-//   }
+@include lg {
+  html {
+    scroll-behavior: smooth;
+    scrollbar-width: thin;
+    scrollbar-color: rgb(80, 63, 18) rgb(48, 31, 10);
+    &::-webkit-scrollbar {
+      -webkit-appearance: none;
+      width: 10px;
+      height: 10px;
+    }
 
-//   * {
-//     scroll-behavior: smooth;
-//     scrollbar-width: thin;
-//     scrollbar-color: gold yellow;
-//   }
-// }
+    &::-webkit-scrollbar-track {
+      background: rgb(26, 17, 6);
+      border-radius: 0px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      cursor: pointer;
+      border-radius: 5px;
+      background: rgb(83, 187, 180);
+    }
+
+    &::-webkit-scrollbar-thumb:window-inactive {
+      background-color: rgba(0, 0, 0, 0.25);
+    }
+
+    &::-webkit-scrollbar-thumb:hover {
+      background: rgb(87, 235, 220);
+    }
+  }
+}
