--- a/front/src/sections/TheTavern/Tavern/ScreenShare/ScreenShare.module.scss
+++ b/front/src/sections/TheTavern/Tavern/ScreenShare/ScreenShare.module.scss
@@ -1,32 +1,32 @@
 @import '../../../../assets/scss/variables';
 
 .ScreenContainer {
+  grid-area: screen;
   position: relative;
   z-index: 5;
   width: 100%;
   min-width: 20rem;
   min-height: 12rem;
-  max-width: 75rem;
   z-index: 10;
-  position: relative;
+  margin: 0 auto;
 
-  @include lg {
+  @include xl {
+    grid-area: none;
+    max-width: 75rem;
     max-width: calc(100% - 27rem);
   }
 
   &__Logo {
     position: absolute;
-    margin : 0.5rem 0 0 0.5rem;
+    margin: 0.5rem 0 0 0.5rem;
     width: 2rem;
     @include md {
       width: 4rem;
     }
   }
 
-
   &__Icons {
     @include flex(center, space-between, row nowrap);
-    cursor: pointer;
     position: absolute;
     right: 0.5rem;
     top: 0.5rem;
@@ -38,39 +38,40 @@
     z-index: 100;
 
     &__D20 {
-    width: 3rem;
-    right: 5.6rem;
+      width: 3rem;
+      right: 5.6rem;
 
-    @include md {
-    width: 3rem;
-    right: 5.6rem;
+      @include md {
+        width: 3rem;
+        right: 5.6rem;
+      }
     }
-  }
 
-  &__AddPlayer{
-    width: 2.5rem;
-    right: 3rem;
-    z-index: 500;
+    &__AddPlayer {
+      width: 2.5rem;
+      right: 3rem;
+      z-index: 500;
 
-    @include md {
-      right: 13.5rem;
+      @include md {
+        right: 13.5rem;
+      }
     }
-  }
 
     img {
+      cursor: pointer;
       width: 2rem;
     }
   }
 }
 
 .AddPlayerContainer {
-    font-family: 'Nunito Sans', sans-serif;
-    position: absolute;
-    right: 3rem;
-    top: 2rem;
-    background-color: #331D0F;
-    box-shadow: 3px 3px 2px 1px rgba(0, 0, 0, 0.6);
-    border-radius:5px;
+  font-family: 'Nunito Sans', sans-serif;
+  position: absolute;
+  right: 3rem;
+  top: 2rem;
+  background-color: #331d0f;
+  box-shadow: 3px 3px 2px 1px rgba(0, 0, 0, 0.6);
+  border-radius: 5px;
 
   &__Image {
     position: absolute;
@@ -83,38 +84,37 @@
     position: absolute;
     right: 3rem;
     top: 2rem;
-    background-color: #331D0F;
+    background-color: #331d0f;
     box-shadow: 3px 3px 2px 1px rgba(0, 0, 0, 0.6);
-    border-radius:5px;
+    border-radius: 5px;
   }
 
   &__Image {
-      position: absolute;
-      z-index: 500;
-      width: 2.5rem;
+    position: absolute;
+    z-index: 500;
+    width: 2.5rem;
   }
 }
 
-
 .ContactList {
-  &__List{
-    &__Item{
-      display:flex;
-      border-bottom:1px solid black;
+  &__List {
+    &__Item {
+      display: flex;
+      border-bottom: 1px solid black;
       align-items: center;
       padding-bottom: 0.5rem;
 
-      &__Btn{
+      &__Btn {
         margin-right: 0.5rem;
-        background-color : #77d4bd;
+        background-color: #77d4bd;
         border: none;
         padding: 0.5rem;
         border-radius: 2px;
-        border-color:#77d4bd ;
+        border-color: #77d4bd;
         color: #fff;
 
-        &:hover{
-          background-color : #e19a2f;
+        &:hover {
+          background-color: #e19a2f;
         }
       }
 
@@ -123,14 +123,13 @@
         margin-left: 0.5rem;
         width: 3rem;
         border-radius: 50%;
-        margin-right : 0.5rem;
+        margin-right: 0.5rem;
       }
 
-      &__Content{
-        width : 90%;
-        margin-right : 1rem;
+      &__Content {
+        width: 90%;
+        margin-right: 1rem;
       }
     }
   }
-
 }
