--- a/front/src/sections/TheTavern/Thread/PostForm/PostForm.module.scss
+++ b/front/src/sections/TheTavern/Thread/PostForm/PostForm.module.scss
@@ -13,9 +13,31 @@
   transition: all 300ms ease-in;
   padding: 0 1rem;
 
+  @include md {
+    margin-top: 1.8rem;
+    margin-right: 0.75rem;
+    top: 0;
+    position: sticky;
+    transform: none;
+    background-color: initial;
+    width: calc(100% - 50%);
+    max-width: 75rem;
+  }
+
+  @include lg {
+    margin-right: 0;
+    width: calc(100% - 48%);
+    margin-left: $gutter/2;
+  }
+
+  @include xl {
+    width: calc(100% - 60%);
+  }
+
   &__NumberRequests {
-    text-align: center;
-    padding-top: 0.4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: absolute;
     top: -0.5rem;
     right: 0.5rem;
@@ -26,27 +48,6 @@
     border-radius: 50%;
     width: 2rem;
     height: 2rem;
-  }
-
-  @include md {
-    margin-top: 1.8rem;
-    margin-right: .75rem;
-    top: 0;
-    position: sticky;
-    transform: none;
-    background-color: initial;
-    width: calc(100% - 50%);
-    max-width: 75rem;
-  }
-  
-  @include lg {
-    margin-right: 0;
-    width: calc(100% - 48%);
-    margin-left: $gutter/2;
-  }
-  
-  @include xl {
-    width: calc(100% - 60%);
   }
 
   &__Open {
@@ -66,7 +67,7 @@
   }
 
   &__TavernInvitation {
-    margin: ($gutter +1 ) 0 1rem;
+    margin: ($gutter + 1) 0 1rem;
     background: url('../../../../assets/images/img-noise.png');
     width: 100%;
     padding: 1rem;
@@ -77,7 +78,6 @@
     @include sm {
       margin: ($gutter * 2) 0 $gutter;
     }
-
 
     &:before {
       content: '';
@@ -93,7 +93,6 @@
       border-radius: 5px 5px 0 0;
       background-color: #fff;
       z-index: -1;
-
     }
 
     &:after {
@@ -119,7 +118,7 @@
         font-size: 1.1em;
       }
 
-      @include xxl {  
+      @include xxl {
         font-size: 1.5em;
       }
     }
@@ -141,11 +140,11 @@
       }
 
       @include md {
-        background-position: 0 -2rem;
+        background-position: 0 0;
       }
 
       @include xl {
-        background-position: 0 -2rem;
+        background-position: 0 -1rem;
       }
 
       @include xxl {
@@ -183,7 +182,7 @@
     overflow: auto;
     height: 45%;
     margin-top: 0.3rem;
-    max-height:7.9rem;
+    max-height: 7.9rem;
     scroll-behavior: smooth;
     scrollbar-width: thin;
     scrollbar-color: rgb(87, 51, 20) rgb(19, 1, 1);
