--- a/front/src/sections/TheTavern/Thread/Posts/Post/Post.module.scss
+++ b/front/src/sections/TheTavern/Thread/Posts/Post/Post.module.scss
@@ -47,15 +47,14 @@
   background-color: #03c9a5;
   width: 1.2rem;
   border-radius: 20%;
-  box-shadow: 0 0 0 0.1px #03c9a5 ;
+  box-shadow: 0 0 0 0.1px #03c9a5;
   &:hover {
-    cursor: pointer; 
-    animation:bounceOutContact .6s linear;
+    cursor: pointer;
+    animation: bounceOutContact 0.6s linear;
   }
 
-  
   @include md {
-    width: 1.1rem;
+    width: 1.3rem;
     padding: 0.1rem;
   }
 }
@@ -66,7 +65,7 @@
   display: block;
   margin: auto;
   font-size: 0.8rem;
-  
+
   @include md {
     font-size: 1rem;
   }
@@ -75,15 +74,13 @@
 .AuthorAvatar {
   background-color: #fff;
   border-radius: 50%;
-  border: solid 4px #18120E;
+  border: solid 4px #18120e;
   width: 2.5rem;
-  background-color: #18120E;
+  background-color: #18120e;
   &:hover {
-    cursor: pointer; 
-    animation:bounceOut .4s linear;
+    cursor: pointer;
+    animation: bounceOut 0.4s linear;
   }
-
-  
 
   @include md {
     width: 3.5rem;
@@ -98,10 +95,10 @@
     @extend .AuthorAvatar;
     border: 4px solid #03c9a5;
     background-color: #03c9a5;
-    box-shadow: 0 0 0 0.1px #03c9a5 ;
+    box-shadow: 0 0 0 0.1px #03c9a5;
     &:hover {
-      cursor: pointer; 
-      animation:bounceOutContact .6s linear;
+      cursor: pointer;
+      animation: bounceOutContact 0.6s linear;
     }
   }
 }
@@ -138,7 +135,7 @@
 }
 
 .ContentPost {
-  background-color: #1A1412;
+  background-color: #1a1412;
   border-radius: 5px;
   color: #fff;
   width: 95%;
@@ -157,7 +154,7 @@
   @include flex(center, flex-start, row nowrap);
   word-wrap: break-word;
   width: 100%;
-  
+
   & div:first-child {
     @include flex(center, flex-start, row nowrap);
   }
@@ -173,7 +170,6 @@
     @extend .DateContainer__Heart;
     color: #e2264d;
   }
-  
 
   & div:last-child {
     margin-left: 1rem;
@@ -224,9 +220,24 @@
 }
 
 @keyframes bounceOutContact {
-  0%{ box-shadow: 0 0 0 0.1px #03c9a5; opacity:1;}
-  25%{ box-shadow: 0 0 0 0.1px #03c9a5; opacity:1;}
-  50%{ box-shadow: 0 0 0 3px #03c9a5; opacity:1; }
-  75%{ box-shadow: 0 0 0 1px #03c9a5; opacity:1;}
-  100%{ box-shadow: 0 0 0 0.1px #03c9a5; opacity:1;}
+  0% {
+    box-shadow: 0 0 0 0.1px #03c9a5;
+    opacity: 1;
+  }
+  25% {
+    box-shadow: 0 0 0 0.1px #03c9a5;
+    opacity: 1;
+  }
+  50% {
+    box-shadow: 0 0 0 3px #03c9a5;
+    opacity: 1;
+  }
+  75% {
+    box-shadow: 0 0 0 1px #03c9a5;
+    opacity: 1;
+  }
+  100% {
+    box-shadow: 0 0 0 0.1px #03c9a5;
+    opacity: 1;
+  }
 }
