--- a/front/src/sections/TheTavern/UserAccount/Contact/Contact.module.scss
+++ b/front/src/sections/TheTavern/UserAccount/Contact/Contact.module.scss
@@ -1,16 +1,15 @@
 @import '../../../../assets/scss/variables';
 .Contact {
-  background-color : #3A271D;
-  border-radius:5px;
-  font-family:  'nunito sans', 'sans serif';
-  padding:0.3rem 0.5rem;
-  overflow : auto;
+  background-color: #3a271d;
+  border-radius: 5px;
+  font-family: 'nunito sans', 'sans serif';
+  padding: 0.3rem 0.5rem;
+  overflow: auto;
   max-height: 53vh;
 
-  
-
-  &_Title{
+  &_Title {
     font-style: italic;
+    width: fit-content;
     clip-path: polygon(0% 0%, 0% 98%, 100% 99%, 97% 77%, 99% 59%, 95% 32%, 100% 1%);
     background-color: rgb(255, 217, 0);
     box-shadow: 10px 5px 5px black;
@@ -18,12 +17,12 @@
     font-weight: 200;
     color: white;
     font-size: 0.8em;
-    padding:0.3rem;
+    padding: 0.3rem;
     padding-right: 0.5rem;
     transition: 0.5s;
     background-position: 0 0;
     background-size: 300% auto;
-    background-image: linear-gradient(to right,  #b08510 0%,  #ffe992 51%,  #b08510 100%);
+    background-image: linear-gradient(to right, #b08510 0%, #ffe992 51%, #b08510 100%);
 
     @include md {
       font-style: italic;
@@ -34,66 +33,73 @@
       font-weight: 200;
       color: white;
       font-size: 1em;
-      padding:0.3rem;
+      padding: 0.3rem;
       padding-right: 1rem;
       transition: 0.5s;
       background-position: 0 0;
       background-size: 300% auto;
-      background-image: linear-gradient(to right,  #b08510 0%,  #ffe992 51%,  #b08510 100%);
+      background-image: linear-gradient(to right, #b08510 0%, #ffe992 51%, #b08510 100%);
       &:hover,
-      &:active
-      {
+      &:active {
         background-position: 90%;
       }
     }
-
   }
 
-  &_Image{
-    border-radius : 50%;
-    width : 20%;
-    max-width: 80px;
-
-  }
-
-  &_Content{
-    font-weight : bold;
-    color:rgb(32, 199, 169);
+  &_Content {
+    font-weight: bold;
+    color: rgb(32, 199, 169);
     max-width: 75%;
 
-    &_Container{
+    &_Container {
+      position: relative;
       background-color: #3a271d;
       background-image: url('../../../../assets/images/backgroundTavernAsk.png');
       background-size: 100%;
       background-position: center;
       margin: 0.5rem 0;
-      padding: 0.6rem 0.3rem;
-      display: flex;
-      justify-content: space-between;
+      padding: 1rem 0.3rem;
+      display: grid;
+      grid-template-columns: 5fr 10fr 10fr 1fr;
       align-items: center;
+      justify-content: center;
+
+      @include md {
+        grid-template-columns: 5fr 10fr 10fr 1fr;
+      }
     }
   }
 
-  &_Btn{
-    font-family: 'Fredoka One', cursive;
-    margin-top: -4rem;
-    margin-right: -0.5rem;
-    font-size: 1.3rem;
-    background-color: rgb(227, 35, 35) ;
+  &_Image {
+    width: 2.5rem;
     border-radius: 50%;
-    padding-left: 0.4rem;
-    padding-right: 0.4rem;
-    border:3px solid #19130F;
+    max-width: 80px;
+
+    @include lg {
+      width: 4rem;
+    }
+  }
+
+  &_Btn {
+    @include flex(center, center, row nowrap);
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-family: 'Fredoka One', cursive;
+    height: 2rem;
+    width: 2rem;
+    background-color: rgb(227, 35, 35);
+    border-radius: 50%;
+    border: 3px solid #19130f;
     color: #fff;
-    -webkit-transition: -webkit-transform .8s ease-in-out;
-    transition:         transform .8s ease-in-out;
+    -webkit-transition: -webkit-transform 0.8s ease-in-out;
+    transition: transform 0.8s ease-in-out;
 
     &:hover {
       -webkit-transform: rotate(180deg);
       transform: rotate(180deg);
     }
     @include md {
-
     }
   }
 }
