--- a/front/src/sections/TheTavern/components/Nav/NavLinks/NavLinks.module.scss
+++ b/front/src/sections/TheTavern/components/Nav/NavLinks/NavLinks.module.scss
@@ -9,13 +9,13 @@
   top: 0.5rem;
   right: $gutter * 2.3;
   transform: translate(100%);
-  color:  white;
+  color: white;
   // transition: all 750ms cubic-bezier(.75,-1.52,.04,1.95);
   // transition: all 750ms cubic-bezier(1,.14,.23,1.44);
   transition: all 750ms cubic-bezier(0.46, 0.59, 0.36, 1.27);
 
   @include lg {
-    color:  white;
+    color: white;
     transform: none;
     position: relative;
     transition: none;
@@ -43,12 +43,36 @@
 
   li {
     padding: $gutter/2 $gutter/3;
-    border-right: solid 2.5px #18120E;
+    border-right: solid 2.5px #18120e;
 
     @include lg {
       padding: $gutter/3.5;
       border: none;
       align-self: flex-start;
+    }
+
+    & a {
+      position: relative;
+
+      &:hover {
+        &:before {
+          visibility: visible;
+          transform: scaleX(1);
+        }
+      }
+
+      &:before {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        bottom: -2px;
+        left: 0;
+        background-color: #fff200;
+        visibility: hidden;
+        transform: scaleX(0);
+        transition: all 0.3s ease-in-out;
+      }
     }
 
     &:last-child {
@@ -64,13 +88,11 @@
     }
   }
 
-
-
   &__Deconnexion {
     border: none;
     cursor: pointer;
 
-    &__Title{
+    &__Title {
       display: none;
       @include lg {
         border-radius: 5px;
@@ -78,8 +100,7 @@
         margin-left: -2rem;
         padding: 0.5rem;
         font-weight: 200;
-        background-color : #f66d67;
-
+        background-color: #f66d67;
       }
     }
 
@@ -91,7 +112,5 @@
         width: 1rem;
       }
     }
-    
   }
-  
 }
