--- a/front/src/sections/TheTavern/Tavern/Tavern.module.scss
+++ b/front/src/sections/TheTavern/Tavern/Tavern.module.scss
@@ -57,7 +57,7 @@
   //position: relative;
   z-index: 1000;
   display: flex;
-  @include md {
+  @include xl {
     margin-top: 0;
     margin-left: 0;
     position: relative;
