--- a/front/src/sections/TheTavern/Thread/PostForm/PostForm.module.scss
+++ b/front/src/sections/TheTavern/Thread/PostForm/PostForm.module.scss
@@ -185,7 +185,32 @@
     max-height: 7.9rem;
     scroll-behavior: smooth;
     scrollbar-width: thin;
-    scrollbar-color: rgb(87, 51, 20) rgb(19, 1, 1);
+    scrollbar-color: rgb(80, 63, 18) rgb(48, 31, 10);
+
+    &::-webkit-scrollbar {
+      -webkit-appearance: none;
+      width: 10px;
+      height: 10px;
+    }
+
+    &::-webkit-scrollbar-track {
+      background: rgb(26, 17, 6);
+      border-radius: 0px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      cursor: pointer;
+      border-radius: 5px;
+      background: #251b11;
+    }
+
+    &::-webkit-scrollbar-thumb:window-inactive {
+      background-color: rgba(0, 0, 0, 0.25);
+    }
+
+    &::-webkit-scrollbar-thumb:hover {
+      background: #412f1d;
+    }
 
     @include md {
       max-height: 8.5rem;
@@ -197,29 +222,6 @@
     @include xl {
       overflow-x: auto;
     }
-  }
-
-  &__Invitation::-webkit-scrollbar {
-    -webkit-appearance: none;
-    width: 10px;
-    height: 10px;
-  }
-  &__Invitation::-webkit-scrollbar-track {
-    background: #ccc;
-    border-radius: 0px;
-  }
-  &__Invitation::-webkit-scrollbar-thumb {
-    cursor: pointer;
-    border-radius: 5px;
-    background: #888;
-    -webkit-transition: color 0.2s ease;
-    transition: color 0.2s ease;
-  }
-  &__Invitation::-webkit-scrollbar-thumb:window-inactive {
-    background: rgba(0, 0, 0, 0.25);
-  }
-  &__Invitation::-webkit-scrollbar-thumb:hover {
-    background: rgb(100, 100, 100);
   }
 
   &__Footer {
