--- a/front/src/sections/TheTavern/Tavern/Chat/Chat.module.scss
+++ b/front/src/sections/TheTavern/Tavern/Chat/Chat.module.scss
@@ -62,6 +62,20 @@
       height: 100%;
     }
 
+    &__DiceRoll {
+      padding: 0.66667rem;
+      white-space: pre-wrap;
+      white-space: -moz-pre-wrap;
+      white-space: -pre-wrap;
+      white-space: -o-pre-wrap;
+      word-wrap: break-word;
+      word-break: break-word;
+      background-color: rgb(214, 189, 152);
+      border-radius: 3px;
+      color: rgb(66, 40, 16);
+      border: 2px solid rgb(155, 99, 27);
+    }
+
     &__Message {
       width: 100%;
       margin: ($gutter/2) 0;
